Fix contrast errors

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -77,9 +77,9 @@ $hel-light:           #ebedf1;
 $medium-gray: #797979;
 $light-gray: #c4c4c4;
 $lightest-gray: #f9f9f9;
-$dark-green: #00a681;
+$dark-green: #008567;
 $dark-green-light: #00eab6;
-$dark-green-dark: #008467;
+$dark-green-dark: #006A52;
 $red: #FF0000;
 
 $hds-ui-color-success: #007a64;
